# py-e-ark-ip-validator

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
py_e_ark_ip_validator/: __init__.py  information_package.py  mets.py  rules.py  struct_errors.py  validator.py
py_e_ark_ip_validator/resources/: result_template.txt
py_ip_validator/: __init__.py  information_package.py  mets.py  rules.py  struct_errors.py  validator.py
tests/: test_archive_handler.py  test_manifest_class.py  test_rules.py  test_structure.py  utils.py
