[metadata]
name = py_ip_validator
author = Carl Wilson
version = 0.1.2
author_email = carl@openpreservation.org
license = Apache License Version 2.0
description = E-ARK Information Package validation
long_description = Core package and command line utility for E-ARK Information Package validation
long_description_content_type = text/markdown
url = github.com/eark-project/py_ip_validator
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages=find:
install_requires =
    importlib-resources>=5.10.2
    lxml>=4.9.2
python_requires = >=3.5, <4

[options.extras_require]
test =
    pytest>=7.2.0

[options.package_data]
* = *.xml, *.file

[tool:pytest]
python_files=*.py
python_classes=Test*
python_functions=test_*